--- a/css/style_base.css
+++ b/css/style_base.css
@@ -11,7 +11,6 @@ body {
   margin: 0;
 }
 
-
 header {
   margin: 0;
   background-attachment: fixed;
@@ -23,12 +22,14 @@ header {
 }
 
 header .cabecalho {
-  height: 10vh;
+  height: 15vh;
+  background-color: black;
 }
 
 header .menu {
   padding: 0;
   height: 2em;
+  margin: 0;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   list-style: none;
@@ -36,9 +37,33 @@ header .menu {
 
 header .menu .menu-item {
   background-color: #111111;
-  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+header .menu .menu-item a {
+  text-decoration: none;
+  color: green;
+}
+
+header .menu .menu-item:hover {
+  background-color: white;
+  border: 5px solid black;
+  border-radius: 5%;
+}
+
+header .menu .menu-item:hover a {
+  color: green;
+}
+
+header .slide-show {
+  height: 84.6vh;
 }
 
 header .slide-show img{
-  height: 70vh;
+  max-width:100%;
+  max-height:100%;
+  width: 100%;
+  height: 100%;
 }
