Mudanças finais na landpage

--- a/css/style_noticias.css
+++ b/css/style_noticias.css
@@ -4,117 +4,101 @@ body {
 }
 
 header {
-  margin: 0;
   background-attachment: fixed;
-  background-position: center;
-  background-image: url('../img/outraimgmassa.jpeg');
-  background-size: cover;
-  background-color: #333333;
-  background-blend-mode:soft-light;
-  height: 100vh;
-  flex-direction: column;
-}
-
-header .cabecalho {
-  height: 15vh;
-}
-
-header .menu {
-  height: 4em;
-  display: grid;
-  align-items: center;
-  grid-template-columns:40% 60%;
-  grid-template-areas: "logo  menu";
-  background-color: rgba(17, 17, 17, 0.5);
-}
-
-header .menu img{
-  grid-area: logo;
-  height: 4em;
-}
-
-header .menu ul {
-  height: 2em;
-  grid-area: menu;
-  padding: 0;
   margin: 0;
-  display: grid;
-  grid-template-columns: repeat(6, auto);
-  justify-content: space-around;
-  align-content: center;
-  list-style: none;
-}
-
-header .menu ul li{
-
-}
-
-header .menu .menu-item {
-  padding: 10px;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  font-size: 1.3em;
-}
-
-
-header .menu .menu-item a {
-  color: white;
-  text-decoration: none;
-}
-
-
-header .centro {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  height: 80vh;
-  color: white;
-}
-
-header .chaves {
-  font-size: 50vh;
-  color: #99FF00;
-  background-color: Transparent;
-  border: none;
-  cursor: pointer;
-}
-
-header .centro p {
-  font-size: 1.5em;
-}
-
-header .apresentação {
-  margin-top: 4%;
-  display: flex;
-  justify-content: space-around;
+  background-position: center;
   flex-direction: column;
-  width: 45%;
-  height: 50vh;
+  justify-content: center;
   text-align: center;
 }
 
-header .apresentação #slide img {
-  align-self: center;
-  width: 20%;
+main {
+  background-color: white;
+  padding-bottom: 5%;
 }
 
-header .comunidades {
+.cabecalho {
+  height: 25vh;
+  background-image: url('../img/terminal.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+}
+
+.menu {
+  padding: 0;
   height: 2em;
+  margin: 0;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  padding-left: 0;
+  grid-template-columns: repeat(6, 1fr);
   list-style: none;
 }
 
-header .comunidades a {
-  text-decoration: none;
-  color: white;
-  transition: all 0.3s ease-in-out;
+.menu .menu-item {
+  background-color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all .7s;
 }
 
-header .comunidades a:hover {
-  font-size: 1.2em;
+.menu .menu-item a {
+  text-decoration: none;
+  color: green;
+  width: 100%;
+}
+
+.menu .menu-item:hover {
+  background-color: white;
+  /*border-bottom: 2px solid black;*/
+}
+
+.menu .menu-item:hover a {
+  color: green;
+  text-decoration: underline;
+}
+main h1 {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  color: black;
+  margin: 0;
+  align-items: center;
+  padding: 20px;
+}
+
+.headline {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25vh;
+  font-size: 60px;
+  background-color: #99CC00;
+}
+
+.grid-noticias {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  margin: 5% 20%;
+  padding: 2%;
+  box-shadow: -10px 0px 0px #FF0000;
+  background-color: white;
+  box-sizing: border-box;
+  border: 10px solid black;
+}
+
+.grid-noticias img {
+  grid-column: 1;
+}
+.grid-noticias div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.grid-noticias h2 , .grid-noticias p {
+  grid-column: 2;
+  display: flex;
 }
 
 .barra-de-estilo {
@@ -187,5 +171,4 @@ header .comunidades a:hover {
 
 .footer-content .icone-social a:hover {
   color: #99FF00;
-  font-size: 1.3em;
 }
