--- a/css/style_base.css
+++ b/css/style_base.css
@@ -15,54 +15,6 @@ header {
   flex-direction: column;
 }
 
-header .cabecalho {
-  height: 15vh;
-}
-
-header .menu {
-  height: 4em;
-  display: grid;
-  align-items: center;
-  grid-template-columns:40% 60%;
-  grid-template-areas: "logo  menu";
-  background-color: rgba(17, 17, 17, 0.5);
-}
-
-header .menu img{
-  grid-area: logo;
-  height: 4em;
-}
-
-header .menu ul {
-  height: 2em;
-  grid-area: menu;
-  padding: 0;
-  margin: 0;
-  display: grid;
-  grid-template-columns: repeat(6, auto);
-  justify-content: space-around;
-  align-content: center;
-  list-style: none;
-}
-
-header .menu ul li{
-
-}
-
-header .menu .menu-item {
-  padding: 10px;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  font-size: 1.3em;
-}
-
-
-header .menu .menu-item a {
-  color: white;
-  text-decoration: none;
-}
-
-
 header .centro {
   display: flex;
   justify-content: center;
@@ -117,75 +69,38 @@ header .comunidades a:hover {
   font-size: 1.2em;
 }
 
-.barra-de-estilo {
-  background-color: #99CC00;
-  margin: 0;
-  color: #99CC00;
-  display: flex;
-  height: 20px;
-}
 
-.footer-content {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  text-align: center;
-  background-image: url("../img/developer.jpg");
-  background-attachment: fixed;
-  background-color: #333333;
-  background-blend-mode:soft-light;
-}
+/*RESPONSIVIDADE*/
+@media all and (max-width: 700px) {
 
-@media all and (max-width: 450px) {
-  .footer-content {
-    display: flex;
-    flex-direction: column;
-    background-size: cover;
-    background-position: center;
-    background-attachment: scroll;
+  header .chaves{
+    font-size: 20vh;
   }
 
-  .footer-content .about {
-    order: 1;
+  header .centro p{
+    font-size: 1.2em;
   }
 
-  .footer-content .social {
-    order: 3;
+  header .apresentação {
+    margin-top: 20%;
+  }
+}
+
+@media all and (max-width:440px){
+  header .centro p{
+    font-size: 1em;
   }
 
-  .footer-content .contact {
-    order: 2;
+  header .apresentação {
+    margin-top: 30%;
   }
 
+  header .comunidades {
+    margin-top: 20px;
+    grid-template-columns:  1fr;
+    grid-gap: 10px;
+    align-content: center;
+    justify-content: center;
+  }
 }
-
-.footer-content .subtitle {
-  margin: 10% 10%;
-  color: white;
-  font-size: 20px;
-}
-
-.footer-content .icone-social {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 25px;
-  padding: 0;
-}
-
-.footer-content .icone-social a {
-  margin: 15px;
-  color: white;
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  transition: all .4s;
-}
-
-.footer-content .icone-social a:hover {
-  color: #99FF00;
-  font-size: 1.3em;
-}
+/*Fim responsivo*/
