--- a/css/style_contato.css
+++ b/css/style_contato.css
@@ -1,10 +1,3 @@
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(../fonts/MaterialIcons-Regular.ttf) format('truetype');
-}
-
 body {
   font-family: 'Ubuntu Mono', monospace;
   margin: 0;
@@ -32,47 +25,16 @@ main {
   background-position: center;
 }
 
-.menu {
-  padding: 0;
-  height: 2em;
-  margin: 0;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  list-style: none;
+@media all and (max-width: 450px) {
+  .cabecalho{
+    background-attachment: scroll;
+  }
 }
 
-.menu .menu-item {
-  background-color: #000000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all .7s;
-}
-
-.menu .menu-item a {
-  text-decoration: none;
-  color: green;
-  width: 100%;
-}
-
-.menu .menu-item:hover {
-  background-color: white;
-  
-}
-
-.menu .menu-item:hover a {
-  color: green;
-  text-decoration: underline;
-}
-main .headline h1 {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  color: black;
-  margin: 0;
-  align-items: center;
-  padding: 20px;
-	/*font-size: 60px;*/
+@media all and (max-width:450px) {
+  main .headline h1 {
+    font-size: 60px;
+  }
 }
 
 .headline {
@@ -83,6 +45,12 @@ main .headline h1 {
   background-color: #99CC00;
 	font-size: 60px;
 
+}
+@media all and (max-width: 450px) {
+  .headline {
+    /*font-size: 35px;*/
+    height: 15vh;
+  }
 }
 /*------------------ FORMULARIO -----------------*/
 
@@ -123,6 +91,7 @@ textarea {
 .contatonome{
   text-align: center;
   text-decoration: blink;
+  font-size:35px;
 
 }
 #container {
@@ -285,13 +254,13 @@ textarea {
 
 @media screen and (max-width: 480px) {
   h1 {
-    font-size: 26px;    
+    font-size: 26px;
   }
   .cabecalho{
-    width: 490px;    
+    width: 490px;
   }
   .cabecalho li{
-    width: 100%;  
+    width: 100%;
   }
   .underline {
     width: 68px;
@@ -321,8 +290,11 @@ textarea {
   }
 }
 
-/*------------------ FIM DO FORMULARIO------------*/
-
+.mapa {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /*-------- FOOTER------------*/
 
 .barra-de-estilo {
