--- a/css/style_noticias.css
+++ b/css/style_noticias.css
@@ -28,38 +28,12 @@ main {
   background-position: center;
 }
 
-.menu {
-  padding: 0;
-  height: 2em;
-  margin: 0;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  list-style: none;
+@media all and (max-width: 1000px) {
+  .cabecalho {
+    background-attachment: scroll;
+  }
 }
 
-.menu .menu-item {
-  background-color: #000000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all .7s;
-}
-
-.menu .menu-item a {
-  text-decoration: none;
-  color: green;
-  width: 100%;
-}
-
-.menu .menu-item:hover {
-  background-color: white;
-  /*border-bottom: 2px solid black;*/
-}
-
-.menu .menu-item:hover a {
-  color: green;
-  text-decoration: underline;
-}
 main h1 {
   text-align: center;
   display: flex;
@@ -77,6 +51,24 @@ main h1 {
   height: 25vh;
   font-size: 60px;
   background-color: #99CC00;
+  transition: .6s all ease-in-out;
+}
+
+@media all and (max-width: 450px) {
+  .headline {
+    font-size: 35px;
+    height: 15vh;
+  }
+}
+
+.headline:hover {
+  font-size: 70px;
+}
+
+@media all and (max-width: 450px) {
+  .headline:hover {
+    font-size: 40px;
+  }
 }
 
 .noticias {
@@ -84,9 +76,14 @@ main h1 {
   grid-template-columns: 50% 50%;
   justify-content: space-between;
   align-items: center;
-
 }
 
+@media all and (max-width: 850px) {
+  .noticias {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
 
 .noticia {
   position: relative;
@@ -97,8 +94,20 @@ main h1 {
   background-color: rgba(255,255,255,0.8);
   box-sizing: border-box;
   transition: all .7s cubic-bezier(0.6, -0.28, 0.74, 0.05);
+  border-radius: 3%;
 }
 
+@media all and (max-width: 450px) {
+  .noticia {
+    display: block;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .conteudo {
+    font-size: .8em;
+  }
+}
 main .noticia .data {
   position: absolute;
   top: 0;
@@ -106,6 +115,12 @@ main .noticia .data {
   background-color: #99CC00;
   font-size: 2em;
   font-weight: bold;
+}
+
+@media all and (max-width: 450px) {
+  main .noticia .data {
+    font-size: 1.3em;
+  }
 }
 
 .noticia:hover {
@@ -129,9 +144,25 @@ main .noticia .data {
 }
 
 
-.grid-noticias img {
+.noticia img {
   grid-column: 1;
+  box-shadow: 10px 10px 50px 20px black inset;
+  transition: all .5s inset;
+  width: 100%;
+  height: 100%;
 }
+
+.noticia:hover img {
+  box-shadow: 10px 10px 50px 20px pink inset;
+  height: 50%;
+}
+
+@media all and (max-width: 450px) {
+  .noticia img {
+    display: none;
+  }
+}
+
 .grid-noticias div{
   display: flex;
   align-items: center;
@@ -161,7 +192,8 @@ main .noticia .data {
   background-blend-mode:soft-light;
 }
 
-@media all and (max-width: 450px) {
+
+@media all and (max-width: 700px) {
   .footer-content {
     display: flex;
     flex-direction: column;
@@ -208,10 +240,9 @@ main .noticia .data {
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  transition: all .4s;
+  transition: all .7s;
 }
 
 .footer-content .icone-social a:hover {
   color: #99FF00;
-  font-size: 1.3em;
 }
