--- a/css/menu.css
+++ b/css/menu.css
@@ -54,7 +54,7 @@ header .menu .menu-item a {
 @media all and (max-width: 700px) {
 
   header .menu {
-    background-color: rgba(17, 17, 17, 0.8);
+  background-color: rgba(17, 17, 17, 0.9);
     display: block;
   }
 
@@ -73,12 +73,13 @@ header .menu .menu-item a {
 
   header .menu .menu-lista{
     display: none;
-    background-color: rgba(17, 17, 17, 0.8);
+    background-color: rgba(17, 17, 17, 0.9);
   }
 
   header .menu .menu-lista li{
     text-align: center;
+    border-top: 1px solid white;
     border-bottom: 1px solid white;
-    background-color: rgba(17, 17, 17, 0.8);
+    background-color: rgba(17, 17, 17, 0.9);
   }
 }
